# group2

./: .gitignore  CMakeLists.txt  README.md  format.sh
.github/workflows/: format.yml  formatter.yml
Level_editor/: Barn.glb  Chicken.glb.import  Main.tscn  objects.json
Level_editor/Scripts/: Export.gd  metadata.gd
Level_editor/jsons/: lights.json
Level_editor/scripts/: exportLights.gd
dependencies/: CMakeLists.txt
dependencies/asio/: CMakeLists.txt
dependencies/assimp/: CMakeLists.txt
dependencies/csv_parser/: CMakeLists.txt
dependencies/glew/: CMakeLists.txt
dependencies/glfw/: CMakeLists.txt
dependencies/glm/: CMakeLists.txt
dependencies/magic_enum/: CMakeLists.txt
dependencies/nlohmann_json/: CMakeLists.txt
dependencies/stb_image/: CMakeLists.txt
dependencies/tinyobjloader/: CMakeLists.txt
include/client/: animal.hpp  camera.h  camera.hpp  character_manager.hpp  client.hpp  client_character_manager.hpp  client_gameobject.hpp  client_gamestate.hpp  client_manager.hpp  client_network.hpp  client_object_loader.hpp  clientgamestate.hpp  clientnetwork.hpp  collider.hpp  core.hpp  cube.hpp  gameobject.hpp  gamestate.hpp  keypad.hpp  light_manager.hpp  mesh.hpp  model.hpp  note.hpp  renderer.hpp  servernetwork.hpp  shader.h  shader.hpp  sound_manager.hpp  transform.hpp  ui.hpp  ui_manager.hpp  window.h  window.hpp
include/server/: ServerNetwork.hpp  client_manager.hpp  collider.hpp  condition.hpp  gamelogic.hpp  gameobject.hpp  gameserver.hpp  keypad_object.hpp  level_manager.hpp  meshcollider.hpp  note_object.hpp  physics.hpp  player.hpp  player_logic.hpp  press_functions.hpp  puzzle.hpp  rigidbody.hpp  server_character_manager.hpp  server_gameobject.hpp  server_gamestate.hpp  server_network.hpp  server_object_loader.hpp  servergamestate.hpp  servernetwork.hpp  time_debugger.hpp
include/shared/: base_gameobject.hpp  base_object_loader.hpp  collider.hpp  constants.hpp  core.hpp  cube.hpp  game_enums.hpp  gameobject.hpp  gamestate.hpp  globals.hpp  packets.hpp  pch.hpp  physics.hpp  rigidbody.hpp  session.hpp  transform.hpp  types.hpp
level_editor/: AnimalNote.glb  AnimalNote.glb.import  Barn.glb  Barn.glb.import  Barn.tscn  BarnLevel.tscn  BlackBox.glb  BlackBox.glb.import  BlueBox.glb  BlueBox.glb.import  BluePressurePlate.glb  BluePressurePlate.glb.import  BrownBox.glb  BrownBox.glb.import  Chicken.glb  Chicken.glb.import  Cow.glb  Cow.glb.import  Cow_CowBodyTexture.png.import  Crate.glb  Crate.glb.import  Cube.glb.import  FurClump.glb.import  GreenBox.glb  GreenBox.glb.import  GreenPressurePlate.glb  GreenPressurePlate.glb.import  Horse.glb  Horse.glb.import  Level_1.tscn  Level_2.tscn  Main.tscn  MazeDoor.glb  MazeDoor.glb.import  MetalBox.glb  MetalBox.glb.import  Note.glb  Note.glb.import  PENobjects.json  Pens.tscn  (+36 more)
level_editor/ChickenCoop/: ChickenCoop.glb.import  ChickenCoop_Mesh fabric_BaseColor-Mesh fabric_Alpha.png.import  ChickenCoop_Mesh fabric_Normal.jpg.import  ChickenCoop_Mesh fabric_Roughness.png.import  ChickenCoop_Plain_Blue_Texture_15100536_col.jpg.import  ChickenCoop_Plain_Blue_Texture_15100536_met-Plain_Blue_Texture_15100536_rough.png.import  ChickenCoop_Plain_Blue_Texture_15100536_nrm.jpg.import  ChickenCoop_Plain_Blue_Texture_2695561_col.jpg.import  ChickenCoop_Plain_Blue_Texture_2695561_met-Plain_Blue_Texture_2695561_rough.png.import  ChickenCoop_Plain_Blue_Texture_2695561_nrm.jpg.import  ChickenCoop_Plain_Blue_Texture_2795562_col.jpg.import  ChickenCoop_Plain_Blue_Texture_2795562_met-Plain_Blue_Texture_2795562_rough.png.import  ChickenCoop_Plain_Blue_Texture_2795562_nrm.jpg.import  ChickenCoop_roof_diffuse.jpg.import  ChickenCoop_roof_glossiness.png.import  ChickenCoop_roof_normal.jpg.import
level_editor/CowPen/: CowPen.blend.import  CowPen.glb.import  CowPen_fabric_14_color.jpg.import  CowPen_fabric_14_normal.jpg.import  CowPen_fabric_14_roughness.png.import
level_editor/Dome/: Dome.glb  Dome.glb.import  Dome_Slate_blue_pattern_stripy_Base_Color.jpg.import  Dome_Slate_blue_pattern_stripy_Normal.jpg.import  Dome_Slate_blue_pattern_stripy_Roughness.png.import  Slate_blue_pattern_stripy_Base_Color.jpg.import  Slate_blue_pattern_stripy_Normal.jpg.import  Slate_blue_pattern_stripy_Roughness.png.import
level_editor/PigPen/: PigPen.glb  PigPen.glb.import  PigPenDoor.glb  PigPenDoor.glb.import
level_editor/Scripts/: Export.gd
resources/: config.json
simple_network/: ClientGame.cpp  ClientNetwork.cpp  ClientNetwork.h  Makefile  ServerGame.cpp  ServerNetwork.cpp
src/client/: CMakeLists.txt  ClientGame.cpp  ClientNetwork.cpp  animal.cpp  camera.cpp  character_manager.cpp  client.cpp  client_character_manager.cpp  client_gamestate.cpp  client_manager.cpp  client_network.cpp  clientgamestate.cpp  clientnetwork.cpp  cube.cpp  gameobject.cpp  gamestate.cpp  keypad.cpp  light_manager.cpp  main.cpp  mesh.cpp  model.cpp  note.cpp  object_loader.cpp  renderer.cpp  servernetwork.cpp  shader.cpp  sound_manager.cpp  transform.cpp  ui.cpp  ui_manager.cpp  window.cpp
src/client/resources/objects/backpack/: roughness.jpg:Zone.Identifier
src/client/resources/objects/chicken/: Chicken.mtl
src/client/resources/objects/cow/: Cow.mtl:Zone.Identifier  Cow.obj:Zone.Identifier
src/client/resources/objects/pig/: Pig.mtl
src/client/resources/objects/sheep/: Sheep.mtl
src/server/: CMakeLists.txt  CMakelists.txt  ServerGame.cpp  ServerNetwork.cpp  client_manager.cpp  condition.cpp  gamelogic.cpp  gameobject.cpp  gameserver.cpp  keypad_object.cpp  level0.csv  level0.txt  level_manager.cpp  main.cpp  object_loader.cpp  physics.cpp  player_logic.cpp  press_functions.cpp  puzzle.cpp  server_character_manager.cpp  server_gamestate.cpp  server_network.cpp  servergamestate.cpp  servernetwork.cpp
src/server/logic/: animal.cpp  object.cpp
src/shared/: CMakeLists.txt  CMakelists.txt  NetworkServices.cpp  base_object_loader.cpp  cube.cpp  gameobject.cpp  gamestate.cpp  packets.cpp  physics.cpp  session.cpp  stdafx.cpp  transform.cpp
src/shared/objects/: animal.cpp  cube.cpp  gameobject.cpp
src/shared/utilities/: util_packets.cpp
(+109 files in other folders)
